# floodr

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  SYNTAX.md  TODO
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: audit.yml  building.yml  container-release.yml  docs.yml  general.yml  release.yml
docs/: astro.config.mjs  package.json
docs/src/: theme.css
docs/src/assets/: logo.ai
docs/src/components/: architecture-hint.astro  runtime-calc.svelte
docs/src/content/docs/: index.mdx
docs/src/content/docs/benchmark-reference/: asserts.mdx  expandables.mdx  include.mdx  index.mdx  tags.mdx
docs/src/content/docs/benchmark-reference/actions/: asserts.mdx  assign.mdx  delay.mdx  exec.mdx  index.mdx  requests.mdx
docs/src/content/docs/benchmark-reference/expandables/: index.mdx
docs/src/content/docs/cli/: comparisons.mdx  index.mdx
docs/src/content/docs/cli/comparisons/: index.mdx
docs/src/content/docs/getting-started/: advanced-usage.mdx  basic-usage.mdx  index.mdx  installation.mdx
example/: README.md  delay.yml  rep.yml  single_request.yml  tags.yml
example/compose/: README.md  benchmark.yml  compose.yml
example/compose/web/: dockerfile  main.py
example/server/: docker-compose.yml
example/server/responses/api/: organizations
src/: benchmark.rs  checker.rs  config.rs  interpolator.rs  lib.rs  main.rs  reader.rs  tags.rs  writer.rs
src/actions/: assert.rs  assign.rs  delay.rs  exec.rs  mod.rs  request.rs
src/engine/: benchmark.rs  mod.rs
src/expandable/: include.rs  mod.rs  multi_csv_request.rs  multi_file_request.rs  multi_iter_request.rs  multi_request.rs
src/parsing/: checker.rs  comparison_loader.rs  config.rs  interpolator.rs  mod.rs  reader.rs  tags.rs  writer.rs
