[package]
name = "floodr"
version = "0.10.0"
authors = ["Ferran Basora <fcsonline@gmail.com>","Kieran Wood <kieran@canadiancoding.ca>"]
description = "A configurable, simple rust-based HTTP load testing system"
repository = "https://github.com/descent098/floodr"
keywords = ["performance", "http", "ansible", "jmeter", "load-testing", "testing", "qa"]
license = "GPL-3.0"
edition = "2024"

[dependencies]
clap = {version="4.6.0", features = ["cargo", "derive"] }
colored = "3.1.1"
csv = "1.4.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
url = "2.5.8"
linked-hash-map = "0.5.6"
tokio = { version = "1.5.0", features = ["time", "net"] }
reqwest = { version = "0.13.2", features = ["cookies", "system-proxy"] }
async-trait = "0.1.89"
futures = "0.3.32"
lazy_static = "1.5.0"
num_cpus = "1.17.0"
rand = "0.8.5" # TODO
hdrhistogram = "7.5.4"
hex = "0.4.3"

[dev-dependencies]
tempfile = "3.27"
